# waybar-hovermenu

./: Cargo.toml  README.md
src/: config.rs  ctl.rs  ipc.rs  main.rs  menu.rs  modules.rs  watchers.rs
